# aura-consciousness-proof-kernel

./: LAUNCH_COPY.md  README.md  STEP_BY_STEP_UPLOAD.md  UPLOAD_GUIDE.md  pyproject.toml  report.json  report.md
src/aura_consciousness_proof/: __init__.py  global_workspace.py  homeostasis.py  report.py  self_prediction.py  service_container.py  structural_opacity.py  temporal_binding.py
tests/: test_proof_kernel.py
